auditoria/ajustes/metadata/objects/Marca_Sociedad__c/Marca_Sociedad__c.object-meta.xml
<!-- NAO EXECUTADO. Objeto de juncao Marca x Sociedade (grao sociedade, conforme planilha). -->
<CustomObject>
    <label>Marca x Sociedade</label>
    <pluralLabel>Marcas x Sociedades</pluralLabel>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Codigo Registro</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>