auditoria/ajustes/metadata/objects/Marca_Sociedad__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <label>Codigo</label>
    <type>Text</type>
    <length>80</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <description>Chave idempotente: sociedadeCodigo|MARCA (ex.: C101|CHEVROLET).</description>
</CustomField>