auditoria/ajustes/metadata/objects/Marca_Sociedad__c/fields/Marca__c.field-meta.xml
<!-- Se lookup para BusinessBrand nao for permitido na org, troque type/referenceTo por Text(80) e grave o nome. -->
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <type>Lookup</type>
    <referenceTo>BusinessBrand</referenceTo>
    <relationshipLabel>Sociedades</relationshipLabel>
    <relationshipName>Sociedades_Marca</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>